--- a/Kentalis/Base.lproj/Main.storyboard
+++ b/Kentalis/Base.lproj/Main.storyboard
@@ -420,6 +420,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="2CQ-q2-z0Y"/>
+        <segue reference="mca-qM-TrD"/>
     </inferredMetricsTieBreakers>
 </document>
