--- a/Kentalis/Base.lproj/Main.storyboard
+++ b/Kentalis/Base.lproj/Main.storyboard
@@ -316,15 +316,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="detailDisclosureButton" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="reusableCell" id="4X1-Bk-QKa">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="reusableCell" id="4X1-Bk-QKa">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4X1-Bk-QKa" id="QIU-eV-L9l">
-                                    <rect key="frame" x="0.0" y="0.0" width="253" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="PiD-1R-FeV" kind="push" trigger="accessoryAction" id="iWf-Zx-g6Z"/>
+                                    <segue destination="PiD-1R-FeV" kind="push" id="HDZ-Xz-gye"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -411,8 +411,8 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="u0b-JM-ZjZ" kind="relationship" relationship="viewControllers" id="T7g-tT-pYb"/>
                         <segue destination="F2T-FX-Pj7" kind="relationship" relationship="viewControllers" id="k1C-xC-Uqh"/>
+                        <segue destination="u0b-JM-ZjZ" kind="relationship" relationship="viewControllers" id="T7g-tT-pYb"/>
                         <segue destination="Aau-yK-SEL" kind="relationship" relationship="viewControllers" id="wD1-IT-xGS"/>
                     </connections>
                 </tabBarController>
@@ -432,6 +432,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="mca-qM-TrD"/>
+        <segue reference="2CQ-q2-z0Y"/>
     </inferredMetricsTieBreakers>
 </document>
