--- a/Kentalis/Base.lproj/Main.storyboard
+++ b/Kentalis/Base.lproj/Main.storyboard
@@ -391,7 +391,7 @@
             </objects>
             <point key="canvasLocation" x="1732" y="1935"/>
         </scene>
-        <!--Dossier Details View Controller-->
+        <!--Dossier Details View Controller - Selecteer datum-->
         <scene sceneID="av6-4J-ZDx">
             <objects>
                 <tableViewController id="qFd-U7-eaJ" customClass="DossierDetailsViewController" sceneMemberID="viewController">
@@ -408,7 +408,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="PiD-1R-FeV" kind="push" id="HDZ-Xz-gye"/>
+                                    <segue destination="cyw-iB-sXk" kind="push" id="1WO-xI-UPf"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -417,11 +417,43 @@
                             <outlet property="delegate" destination="qFd-U7-eaJ" id="fLP-Ed-bC1"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="f5W-V1-eZW"/>
+                    <navigationItem key="navigationItem" title="Selecteer datum" id="f5W-V1-eZW"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Dy-Vq-aoH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2196" y="1935"/>
+        </scene>
+        <!--Datum Select Table View Controller - Overzicht-->
+        <scene sceneID="s7k-Fz-hEc">
+            <objects>
+                <tableViewController id="cyw-iB-sXk" customClass="DatumSelectTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="62O-qF-Pt1">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" restorationIdentifier="cell" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="GX9-MD-8Ez">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="GX9-MD-8Ez" id="qLb-jw-GfU">
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="PiD-1R-FeV" kind="push" id="W0a-s0-Zag"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="cyw-iB-sXk" id="OmC-bo-gRg"/>
+                            <outlet property="delegate" destination="cyw-iB-sXk" id="rWS-LU-R15"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Overzicht" id="blO-GX-jZy"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KYu-x4-XIX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2664" y="1912"/>
         </scene>
         <!--Dossier Student2 Table View Controller - Overview-->
         <scene sceneID="NQy-G1-ipI">
@@ -450,7 +482,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wam-zf-wSq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2767" y="1717"/>
+            <point key="canvasLocation" x="3111" y="1861"/>
         </scene>
         <!--Navigation Controller - Dossier-->
         <scene sceneID="RLd-6I-ZFA">
